--- a/index.html
+++ b/index.html
@@ -6,17 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript for Beginners</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
-    <a href="#">Link 0</a>
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-    <a href="#">Link 4</a>
-    <a href="#">Link 5</a>
+
+    <div id="content">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi consectetur dolores, vero voluptatum
+            consequuntur beatae, quos iusto cum nulla adipisci atque cupiditate eaque quisquam ullam nobis esse corporis
+            unde possimus!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nemo maxime doloribus accusantium totam iure
+            inventore ut, sit nostrum molestias ex voluptatum! Atque veritatis mollitia eaque similique ipsum adipisci.
+            Voluptatibus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, odio reprehenderit iusto exercitationem
+            autem omnis eaque reiciendis officiis vero expedita distinctio animi? Magni veniam sed ipsa fuga repellendus
+            quis aperiam?</p>
+    </div>
+
+    <a id="show-more">Show More</a>
 
     <script src="test.js"></script>
+    
 </body>
 
 </html>
